--- a/SolvrSolution/SolvrWebClient/Views/Post/PhysicalIndex.cshtml
+++ b/SolvrSolution/SolvrWebClient/Views/Post/PhysicalIndex.cshtml
@@ -20,11 +20,11 @@
             @*@Html.Label(m => m.Username)*@
         </div>
         <div>
-            @Html.TextArea("DescriptionArea", (string)ViewBag.Description, 10, 0, new { @readonly = "readonly", @class = "post-TextArea-Standard" })
+            @Html.TextArea("DescriptionArea", (string)ViewBag.Description, 10, 0, new { @readonly = "readonly", @class = "standard-TextArea-Size" })
             @*@Html.TextArea(m => m.Description, 10, 0, new { @readonly = "readonly", @class = "post-TextArea-Standard" })*@
         </div>
         <div class="post-BtnFloat">
-            <input type="button" name="Report Post" value="Report" class="post-Btn-Size btn" onclick="location.href='@Url.Action("NotImplementedYet", "Home")'" />
+            <input type="button" name="Report Post" value="Report" class="standard-Btn-Colour standard-Btn-border post-Btn-Size btn" onclick="location.href='@Url.Action("NotImplementedYet", "Home")'" />
         </div>
         <div>
             @Html.Label("", (string)ViewBag.DateCreated, new { @class = "post-DateLabel" })
@@ -41,7 +41,7 @@
             <div>
                 Alternativ description:
                 <br />
-                @Html.TextArea("AltDescriptionArea", (string)ViewBag.AltDescription, 5, 0, new { @readonly = "readonly", @class = "post-TextArea-Standard" })
+                @Html.TextArea("AltDescriptionArea", (string)ViewBag.AltDescription, 5, 0, new { @readonly = "readonly", @class = "standard-TextArea-Size" })
             </div>
             <div>
                 Address:
@@ -56,6 +56,7 @@
         </div>
     }
 
+    <hr />
 
     @* Make a comment here *@
     @using (Html.BeginForm("PostComment", "Post", FormMethod.Post))
@@ -65,18 +66,19 @@
                 <br />
                 @*@{Model.PostId = ViewBag.id;}*@
                 @Html.HiddenFor(m => m.PostId)
-                @Html.TextAreaFor(m => m.Text, 4, 0, new { @class = "post-TextArea-Standard", placeholder = "Write a comment here..." })
+                @Html.TextAreaFor(m => m.Text, 4, 0, new { @class = "standard-TextArea-Size", placeholder = "Write a comment here..." })
                 @*@Html.TextArea("PostCommentArea", "", 4, 0, new { @class = "post-TextArea-Standard", placeholder = "Write a comment here..." })*@
             </div>
             <div class="post-BtnFloat">
-                <input type="submit" name="Post Comment" value="Post Comment" class="post-Btn-Size btn" />
-                <input type="submit" name="Apply to post" value="Apply" class="post-Btn-Size btn" />
+                <input type="submit" name="comment" value="Post Comment" style="margin-right: 10px" class="standard-Btn-Colour standard-Btn-border post-Btn-Size btn" @*@{Model.IsSolvr = false; Html.HiddenFor(m => m.IsSolvr);}*@ />
+                <input type="submit" name="comment" value="Apply" class="standard-Btn-Colour standard-Btn-border post-Btn-Size btn" @*@{Model.IsSolvr = true;} @{Html.HiddenFor(m => m.IsSolvr); }*@ />
             </div>
             <br />
         </div>
-    }
+     }
 
     <hr />
+    
     @* View the Solvr comments here *@
     @foreach (SolvrLibrary.Comment item in ViewBag.CommentList)
     {
@@ -99,7 +101,7 @@
                     @*@Html.TextArea(m => m.Text, 5, 0, new { @readonly = "readonly", @class = "post-TextArea-View" })*@
                 </div>
                 <div class="post-BtnFloat">
-                    <input type="submit" name="Report Comment" value="Report" class="post-Btn-Size btn" />
+                    <input type="submit" name="Report Comment" value="Report" class="standard-Btn-Colour standard-Btn-border post-Btn-Size btn" />
                 </div>
                 @Html.Label("", (item.DateCreated.ToShortTimeString() + " " + item.DateCreated.ToShortDateString()), new { @class = "post-DateLabel" })
                 @*@Html.Label(m => m.Datecreated, new { @class = "post-DateLabel" })*@
@@ -120,8 +122,8 @@
                     @*@Html.TextArea(m => m.Text, 5, 0, new { @readonly = "readonly", @class = "post-TextArea-View" })*@
                 </div>
                 <div class="post-BtnFloat">
-                    <input type="submit" name="Report Comment" value="Report" class="post-Btn-Size btn" />
-                    <input type="submit" name="Choose Solvr" value="Choose" class="post-Btn-Size btn" />
+                    <input type="submit" name="Report Comment" value="Report" class="standard-Btn-Colour standard-Btn-border post-Btn-Size btn" />
+                    <input type="submit" name="Choose Solvr" value="Choose" class="standard-Btn-Colour standard-Btn-border post-Btn-Size btn" />
                 </div>
                 @Html.Label("", (item.DateCreated.ToShortTimeString() + " " + item.DateCreated.ToShortDateString()), new { @class = "post-DateLabel" })
                 @*@Html.Label(m => m.Datecreated, new { @class = "post-DateLabel" })*@
