Har oprettet lidt info her til kontakt siden og skal lave noget om about us

--- a/SolvrSolution/SolvrWebClient/Views/Home/Contact.cshtml
+++ b/SolvrSolution/SolvrWebClient/Views/Home/Contact.cshtml
@@ -4,11 +4,46 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
+@* Anders profil *@
+<img src="~/Content/Images/AndersGert.jpg" />
+<strong>Name:</strong><p>Anders Gert Birkbak Nielsen</p><br />
+<strong>Title:</strong><p>Developer</p> <br />
+<strong>Email:</strong><a href="mailto:1061694@ucn.dk">1061694@ucn.dk</a><br />
+
+@* Christoffer Profil *@
+<img src="~/Content/Images/AndersGert.jpg" />
+<strong>Name:</strong><p>Christoffer Lund Sørensen</p><br />
+<strong>Title:</strong><p>Developer</p> <br />
+<strong>Email:</strong><a href="mailto:1061885@ucn.dk">1061885@ucn.dk</a><br />
+
+@* Daniel Grønhøj profil *@
+<img src="~/Content/Images/AndersGert.jpg" />
+<strong>Name:</strong><p>Daniel Grønhøj Lindgreen</p><br />
+<strong>Title:</strong><p>Developer</p> <br />
+<strong>Email:</strong><a href="mailto:1061936@ucn.dk">1061936@ucn.dk</a><br />
+
+@* Daniel Søgaard profil *@
+<img src="~/Content/Images/AndersGert.jpg" />
+<strong>Name:</strong><p>Daniel Søgaard Jakobsen</p><br />
+<strong>Title:</strong><p>Developer</p> <br />
+<strong>Email:</strong><a href="mailto:1055754@ucn.dk">1055754@ucn.dk</a><br />
+
+@* David Profil *@
+<img src="~/Content/Images/AndersGert.jpg" />
+<strong>Name:</strong><p>David Christopher Hutchinson</p><br />
+<strong>Title:</strong><p>Developer</p> <br />
+<strong>Email:</strong><a href="mailto:1061883@ucn.dk">1061883@ucn.dk</a><br />
+
+@* Tim Profil *@
+<img src="~/Content/Images/AndersGert.jpg" />
+<strong>Name:</strong><p>Tim Mikkelsen</p><br />
+<strong>Title:</strong><p>Developer</p> <br />
+<strong>Email:</strong><a href="mailto:1061944@ucn.dk">1061944@ucn.dk</a><br />
+
+
 <address>
     One Microsoft Way<br />
     Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
 </address>
 
 <address>
