Start på loginside

--- a/SolvrSolution/SolvrWebClient/Views/Shared/_Layout.cshtml
+++ b/SolvrSolution/SolvrWebClient/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                 </ul>
-                @*@Html.Partial("_LoginPartial")*@
+                @Html.Partial("_LoginPartial")
             </div>
 
             <!-- Her indsættes Create Post knappen -->
