--- a/SolvrSolution/SolvrWebClient/Views/Account/Login.cshtml
+++ b/SolvrSolution/SolvrWebClient/Views/Account/Login.cshtml
@@ -5,18 +5,68 @@
 
 <h2>Viewbag.Title</h2>
 
+@*Alt CSS stammer fra bootstrap*@
 <div class="row">
     <div class="col-md-8">
         <section id="loginForm">
-            @using (Html.BeginForm("Login", "Account", @*new { ReturnUrl = ViewBag.ReturnUrl },*@ FormMethod.Post, new { @class = "form-horizontal", role = "form"}))
+            @*ReturnURL er noget fra den forrige login metode*@
+            @using (Html.BeginForm("Login", "Account", @*new { ReturnUrl = ViewBag.ReturnUrl },*@ FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
+                @*Ved ikke om antiforgerytoken skal være her*@
                 @Html.AntiForgeryToken()
                 <h4>Use a registered account to log in.</h4>
                 <hr />
-
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                @*Her er tekst boksen for at skrive sit email*@
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                @*Her er tekst boksen for at skrive sin kode*@
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                @*Her kan man lave en remember me checkbox*@
+                @*<div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <div class="checkbox">
+                            @Html.CheckBoxFor(m => m.RememberMe)
+                            @Html.LabelFor(m => m.RememberMe)
+                        </div>
+                    </div>
+                </div>*@
+                @*Her er knappen til at logge ind med*@
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Log in" class="btn btn-default" />
+                    </div>
+                </div>
+                @*Hvis man ikke har en oprettet bruger kan man klikke på den her. Går direkte til action name "Register"*@
+                <p>
+                    @Html.ActionLink("Register as a new user", "Register")
+                </p>
+                @* Enable this once you have account confirmation enabled for password reset functionality
+                    <p>
+                        @Html.ActionLink("Forgot your password?", "ForgotPassword")
+                    </p>*@
             }
-
         </section>
     </div>
-
+    @*Hvis man har lyst kan man tilføje en facebook login her også "ExternalLogin"*@
+    @*<div class="col-md-4">
+        <section id="socialLoginForm">
+            @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
+        </section>
+    </div>*@
 </div>
+@*Ved intet om det her*@
+@*@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}*@
