--- a/SolvrSolution/SolvrWebClient/Views/CreatePost/EditPost.cshtml
+++ b/SolvrSolution/SolvrWebClient/Views/CreatePost/EditPost.cshtml
@@ -3,7 +3,7 @@
 <h2>Edit Post</h2>
 
 <div class="createPost-Box-ViewPost-Standard">
-    @using (Html.BeginForm("EditPost", "CreatePost", FormMethod.Post))
+    @using (Html.BeginForm("Edit", "CreatePost", FormMethod.Post))
     {
         <div>
             <b>Titel:</b><br />
@@ -13,7 +13,7 @@
             <br />
             <b>Category:</b><br />
             @* TODO: Insert Category logic *@
-            @Html.DropDownListFor(m => m.CategoryId, (IEnumerable<SelectListItem>)ViewBag.DropDownList, "Select Category")
+            @Html.DropDownListFor(m => m.CategoryId, (IEnumerable<SelectListItem>)ViewBag.DropDownList, (string)ViewBag.CategoryName)
         </div>
         <div>
             <b>Description:</b><br />
