--- a/SolvrSolution/SolvrWebClient/Views/Home/Index.cshtml
+++ b/SolvrSolution/SolvrWebClient/Views/Home/Index.cshtml
@@ -1,31 +1,64 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
+﻿<link href="~/Content/bootstrap.css" rel="stylesheet" />
+<link href="~/Content/Site.css" rel="stylesheet" />
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<body>
+    <div class="home-body">
+        <div class="home-side">
+            I am the side box fear me
+        </div>
+        <div class="home-main">
+            @*Home-column sætter ind i tre kolonner som fylder 33,33% af box home-main*@
+            @*Alt her under skal ind i en foreach loop*@
+            <div class="home-column">
+                @*Home-main-content sætter alt indhold ind i en boks*@
+                <div class="home-main-content">
+                    <div>
+                        <img src="~/Content/Images/994192_1.jpg" class="post-CommentAvatar" />
+                        @*Name skal være en link*@
+                        @Html.Label("BrianGotchu")<br />
+                        Category:
+                        @*Category skal hentes fra den valgte pos*@
+                        @Html.Label("Computer")
+                    </div>
+                    <div>
+                        @*Text area her er description fra hentede postering og skal være readonly*@
+                        @Html.TextArea("ViewCommentArea","ViewCommentArea", new { @readonly = "readonly", @class = "standard-TextArea-Size" })
+                    </div>
+                    <div>
+                        @*Den her knap linker til posteringen*@
+                        <input type="submit" name="View post" value="ViewPost" class="standard-Btn-border btn standard-Btn-Colour" style="float:right"/>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+       @* <div class="home-main">
+            @foreach (@*Der skal indsættes noget her*@)
+            {
+                @*Home-column sætter ind i tre kolonner som fylder 33,33% af box home-main*@
+               @* <div class="home-column">
+                        <div class="home-main-content">
+                            <div>
+                                <img src="~/Content/Images/994192_1.jpg" class="post-CommentAvatar" />
+                                @Html.Label("", item.User.Username)
+                            </div>
+                            <div class="post-VoteFloat">
+                                <img src="~/Content/Images/upvote-downvote.png" class="post-Vote" />
+                                @Html.Label("", "0", new { @class = "post-VoteLabel" })
+                                <img src="~/Content/Images/downvote.png" class="post-Vote" />
+                            </div>
+                            <div class="post-CommentBox-TextArea">
+                                @Html.TextArea("ViewCommentArea", item.Text, 5, 0, new { @readonly = "readonly", @class = "post-TextArea-View" })
+                            </div>
+                            <div class="post-BtnFloat">
+                                <input type="submit" name="Report Comment" value="Report" class="post-Btn-Size btn" />
+                            </div>
+                            @Html.Label("", (item.DateCreated.ToShortTimeString() + " " + item.DateCreated.ToShortDateString()), new { @class = "post-DateLabel" })
+                            <br />
+                            <br />
+                        </div>
+                    </div>
+                }
+            </div>*@
+  </body>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
