--- a/SolvrSolution/SolvrWebClient/Views/CreatePost/EditPost.cshtml
+++ b/SolvrSolution/SolvrWebClient/Views/CreatePost/EditPost.cshtml
@@ -3,7 +3,7 @@
 <h2>Edit Post</h2>
 
 <div class="createPost-Box-ViewPost-Standard">
-    @using (Html.BeginForm("Edit", "CreatePost", FormMethod.Post))
+    @using (Html.BeginForm("UpdatePost", "CreatePost", FormMethod.Post))
     {
         <div>
             <b>Titel:</b><br />
@@ -18,13 +18,15 @@
         <div>
             <b>Description:</b><br />
             @* TODO: Insert Description logic *@
-            @Html.TextArea("DescriptionArea", (string)ViewBag.Description, 10, 0, new { @readonly = "readonly", @class = "standard-TextArea-Size" })
+            @Html.TextAreaFor(m => m.Description, 10, 0, new { @class = "standard-TextArea-Size" })
         </div>
         <div>
             <b>Tags:</b><br />
             @* TODO: Insert tags logic *@
+            @Html.TextBoxFor(m => m.TagsString)
         </div><br />
         <div class="createPost-BtnFloat">
+            @Html.HiddenFor(m => m.postId)
             <input type="submit" name="EditPost" value="Save Changes" class="standard-Btn-Colour standard-Btn-border btn" />
         </div><br />
     }
