--- a/SolvrSolution/SolvrWebClient/Views/Shared/_LoginPartial.cshtml
+++ b/SolvrSolution/SolvrWebClient/Views/Shared/_LoginPartial.cshtml
@@ -18,8 +18,17 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-        <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+        @if(Session["Username"] == null)
+        {
+            <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
+            <li>@Html.ActionLink("Log in", "Index", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+        }
+        else
+        {
+            <li>@Html.ActionLink("Log out", "LogOut", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+
+        }
     </ul>
+
 }
 
